--- a/notebooks/training-models.ipynb
+++ b/notebooks/training-models.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0be819cb",
    "metadata": {},
    "outputs": [],
@@ -32,10 +32,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a5e74225",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 244768 entries, 0 to 244767\n",
+      "Data columns (total 1 columns):\n",
+      " #   Column            Non-Null Count   Dtype\n",
+      "---  ------            --------------   -----\n",
+      " 0   SalaryNormalized  244768 non-null  int64\n",
+      "dtypes: int64(1)\n",
+      "memory usage: 1.9 MB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SalaryNormalized</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>25000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>30000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>30000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>27500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>25000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   SalaryNormalized\n",
+       "0             25000\n",
+       "1             30000\n",
+       "2             30000\n",
+       "3             27500\n",
+       "4             25000"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -87,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8946a4d8",
    "metadata": {},
    "outputs": [],
@@ -98,10 +175,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "541e2f44",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<244768x14917 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 923171 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_title_vectorized"
    ]
@@ -132,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "62926f79",
    "metadata": {},
    "outputs": [],
@@ -143,20 +232,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "85b09248",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<244768x14917 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 923171 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "dbc368cf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SalaryNormalized</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>25000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>30000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>30000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>27500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>25000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>244763</th>\n",
+       "      <td>22800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>244764</th>\n",
+       "      <td>22800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>244765</th>\n",
+       "      <td>22800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>244766</th>\n",
+       "      <td>22800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>244767</th>\n",
+       "      <td>42500</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>244768 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        SalaryNormalized\n",
+       "0                  25000\n",
+       "1                  30000\n",
+       "2                  30000\n",
+       "3                  27500\n",
+       "4                  25000\n",
+       "...                  ...\n",
+       "244763             22800\n",
+       "244764             22800\n",
+       "244765             22800\n",
+       "244766             22800\n",
+       "244767             42500\n",
+       "\n",
+       "[244768 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y"
    ]
@@ -187,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c6c8d09d",
    "metadata": {},
    "outputs": [],
@@ -230,10 +427,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "a0ebb2d1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predictions:\n",
+      "  [[36329.3401252 ]\n",
+      " [24994.45892553]\n",
+      " [30252.71791482]\n",
+      " ...\n",
+      " [21808.86286281]\n",
+      " [30802.06643447]\n",
+      " [34720.7647732 ]]\n",
+      "MAE for Linear Regression Model:  8657.710037667131\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
     "lrModel = LinearRegression() # Instance.\n",
@@ -289,10 +502,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "9602a61e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predictions:\n",
+      "  [[36282.66675248]\n",
+      " [17353.9188599 ]\n",
+      " [30256.92827149]\n",
+      " ...\n",
+      " [23060.25942236]\n",
+      " [28012.35552722]\n",
+      " [34769.28500259]]\n",
+      "MAE for Ridge Model:  8616.753786449399\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.linear_model import Ridge\n",
     "ridgeModel = Ridge() # Instance.\n",
@@ -348,10 +577,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "6188d3c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predictions:\n",
+      "  [36249.43889789 20163.56243617 30465.88439844 ... 32526.98079274\n",
+      " 25040.10621769 39581.57774515]\n",
+      "MAE for Lasso Model:  8834.294987558691\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.linear_model import Lasso\n",
     "lassoModel = Lasso() # Instance.\n",
@@ -407,10 +647,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "1d1f784c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predictions:\n",
+      "  [35811.18015834 32896.16153646 35328.01934386 ... 33810.29474899\n",
+      " 33205.52933158 35922.86842709]\n",
+      "MAE for Elastic Net Model:  12888.346719289186\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.linear_model import ElasticNet\n",
     "elasticNetModel = ElasticNet() # Instance.\n",
@@ -450,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "b8a2910b",
    "metadata": {},
    "outputs": [],
@@ -463,20 +714,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "11f1b2a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestRegressor(n_jobs=-1)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "RandomFRModel.fit(x_train, np.ravel(y_train)) # Training."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "53a8ae40",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predictions:\n",
+      "  [32479.58454046 30664.11458944 27278.71369819 ... 20893.28166667\n",
+      " 27511.01195345 24248.0786062 ]\n",
+      "MAE for RandomForestRegressor Model:  8834.294987558691\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "salary_predicted_RandomFR = RandomFRModel.predict(x_valid)\n",
