--- a/notebooks/preliminary-analysis.ipynb
+++ b/notebooks/preliminary-analysis.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install --upgrade -r ../requirements.txt"
+    "#!pip install --upgrade -r ../requirements.txt --user"
    ]
   },
   {
@@ -68,13 +68,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "786a3d9c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# For Linux users.\n",
     "with py7zr.SevenZipFile(\"../datasets/Train_rev1.7z\", mode='r') as archive:\n",
-    "  archive.extractall(path=\"/tmp\") # for linux users."
+    "  archive.extractall(path=\"/tmp\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "845c31ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For Windows users.\n",
+    "with py7zr.SevenZipFile(\"../datasets/Train_rev1.7z\", mode='r') as archive:\n",
+    "  archive.extractall(path=\"C:\\Windows\\Temp\")"
    ]
   },
   {
@@ -88,12 +101,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "2f6f4ef3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# For Linux users.\n",
     "df = pd.read_csv(\"/tmp/Train_rev1.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3061f5bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For Windows users.\n",
+    "df = pd.read_csv(\"C:\\Windows\\Temp\\Train_rev1.csv\")"
    ]
   },
   {
@@ -560,7 +585,7 @@
      "data": {
       "text/plain": [
        "0    35000\n",
-       "dtype: int64"
+       "Name: SalaryNormalized, dtype: int64"
       ]
      },
      "execution_count": 11,
@@ -658,14 +683,33 @@
     "   - A média (mean) de todos os salários (anualmente) foi de 34.122;\n",
     "   - A mediana (median/2° Quartil = 50% dos dados) de todos os salários (anualmente) foi de 30.000:\n",
     "     - Vejam que a nossa mediana não está tão distante da nossa média.\n",
-    "   - O Desvio Padrão (Standard Deviation/ que representa quão longe nós estamos da média) é 17.640.\n",
-    "   - A moda (o salário mais frequente) foi 35.000 com 9.178 amostras. "
+    "   - A moda (salário mais frequente) foi 35.000 com 9.178 amostras;\n",
+    "   - O TOP 10 salários mais frequentes foram os seguintes:\n",
+    "     - 35.000 com 9.178 amostras;\n",
+    "     - 30.000 com 8.319 amostras;\n",
+    "     - 40.000 com 7.688 amostras;\n",
+    "     - 45.000 com 6.735 amostras;\n",
+    "     - 25.000 com 6.309 amostras;\n",
+    "     - 32.500 com 6.215 amostras;\n",
+    "     - 37.500 com 5.756 amostras;\n",
+    "     - 27.500 com 5.544 amostras;\n",
+    "     - 50.000 com 5.424 amostras;\n",
+    "     - 42.500 com 4.555 amostras.\n",
+    "   - O Desvio Padrão (Standard Deviation/ que representa quão longe nós estamos da média) é 17.640."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a44a9699",
+   "metadata": {},
+   "source": [
+    "**Rodrigo Leite -** *drigols*"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -679,7 +723,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
