--- a/notebooks/training-models.ipynb
+++ b/notebooks/training-models.ipynb
@@ -40,7 +40,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install --upgrade -r ../requirements.txt"
+    "#!pip install --upgrade -r ../requirements.txt --user"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15fb04e6",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -59,30 +67,72 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "f15a00b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import py7zr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "ca168b0f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import py7zr\n",
-    "\n",
+    "# For Linux users.\n",
     "with py7zr.SevenZipFile(\"../datasets/Test_rev1.7z\", mode='r') as archive:\n",
-    "  archive.extractall(path=\"/tmp\") # For Linux users."
+    "  archive.extractall(path=\"/tmp\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "54fb4655",
+   "id": "68ba8018",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "# For Windows users.\n",
+    "with py7zr.SevenZipFile(\"../datasets/Test_rev1.7z\", mode='r') as archive:\n",
+    "  archive.extractall(path=\"C:\\Windows\\Temp\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f2db238c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e196ef09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For Linux users.\n",
     "testing_df = pd.read_csv(\"/tmp/Test_rev1.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
+   "id": "26411a89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For Windows users.\n",
+    "testing_df = pd.read_csv(\"C:\\Windows\\Temp\\Test_rev1.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "9ff00158",
    "metadata": {},
    "outputs": [
@@ -249,7 +299,7 @@
        "4  cv-library.co.uk  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,11 +311,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "54c11d6b",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e17a5585",
    "metadata": {},
    "source": [
     "# 03 - Treinando & Validando os Loads\n",
     "> Na parte de **Treinamento & Validação** nós vamos utilizar as colunas (features) já Pré-Processadas em cada **Load** para treinar vários modelos de Regressão e tentar encontrar o melhor a partir que novas colunas (features) são Pré-Processadas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9773127b",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -1138,7 +1204,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1152,7 +1218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
