Fix the error get_testing_data

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -123,7 +123,7 @@
     "    if platform.system() == 'Windows':\n",
     "      try:\n",
     "        # For Windows users.\n",
-    "        df_testing = pd.read_csv(\"C:\\Windows\\Temp\\Test_rev1.7z\")\n",
+    "        df_testing = pd.read_csv(\"C:\\Windows\\Temp\\Test_rev1.csv\")\n",
     "      except FileNotFoundError:\n",
     "        print(\"File or path not!\")\n",
     "      else:\n",
