--- a/notebooks/training-validation.ipynb
+++ b/notebooks/training-validation.ipynb
@@ -19,10 +19,71 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0c734791",
+   "metadata": {},
+   "source": [
+    "# Classes \"Training\" e \"Validation\"\n",
+    "Como um dos requisitos da **GRIA** para o desafio era que os códigos fossem reaproveitados e documentados vamos criar 2 classes:\n",
+    "\n",
+    " - **Training:**\n",
+    "   - Responsável pelo processo de treinar nossos dados em vários modelos diferentes.\n",
+    " - **Validation:**\n",
+    "   - Responsável por metrificar os modelos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d81a2cbc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Training:\n",
+    "  pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b604f81",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9fe2ba45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Validation:\n",
+    "  pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53632319",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "000438db",
    "metadata": {},
    "source": [
-    "# 01 - Baixando & Importando as bibliotecas necessárias"
+    "# 01 - Preparando os dados & Ambiente\n",
+    "Nessa etapa vamos preparar os dados e o ambiente (jupyter notebook) para **treinar** e **validar** nossos modelos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cac06b87",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -30,12 +91,13 @@
    "id": "19db21db",
    "metadata": {},
    "source": [
+    "## 01.1 - Baixando as Bibliotecas necessárias\n",
     "Inicialmente vamos baixar as bibliotecas necessárias para nossa análise (Eu já tenho todas baixadas no meu ambiente virtual mas você pode remover o comentário e baixar para sua máquina local ou Ambiente Virtual)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "a7a0e7d1",
    "metadata": {},
    "outputs": [],
@@ -53,12 +115,49 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8cfa7002",
+   "metadata": {},
+   "source": [
+    "## 01.2 - Importando o módulo \"Preprocessing\"\n",
+    "Nós também vamos utilizar o módulo **\"Preprocessing\"** que foi criado na etapa de *Pré-Processamento*. Lembrem, que nós também temos que *Pré-Processar* os dados de *teste* como foi feito nos dados de treino e vamos utilizar os métodos de extrair e pegar os conjuntos de dados "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "af02dfaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run \"../src/preprocessing.py\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "582698bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preprocessing = Preprocessing()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cacfa52c",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "67b737dc",
    "metadata": {},
    "source": [
-    "# 02 - Extraindo o conjunto de dados de teste\n",
+    "## 01.3 - Extraindo e pegando o conjunto de dados de teste\n",
     "\n",
-    "> A primeira coisa que vamos fazer é pegar o conjunto de dados de teste disponibilizado pelo **Adzuna**.\n",
+    "Agora vamos pegar o conjunto de dados de teste disponibilizado pelo **Adzuna**.\n",
     "\n",
     "**NOTE:**  \n",
     "Vale lembrar que nesse conjunto de dados não tem as colunas (feature) **\"SalaryRaw\"** e **\"SalaryNormalized\"**."
@@ -66,73 +165,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "f15a00b3",
+   "execution_count": 15,
+   "id": "8628a2f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File extracted!\n"
+     ]
+    }
+   ],
    "source": [
-    "import py7zr"
+    "preprocessing.extract_7z_data(\"../datasets/Test_rev1.7z\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "ca168b0f",
+   "execution_count": 16,
+   "id": "f38a5e9d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing data ready!\n"
+     ]
+    }
+   ],
    "source": [
-    "# For Linux users.\n",
-    "with py7zr.SevenZipFile(\"../datasets/Test_rev1.7z\", mode='r') as archive:\n",
-    "  archive.extractall(path=\"/tmp\")"
+    "df_testing = preprocessing.get_testing_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "68ba8018",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# For Windows users.\n",
-    "with py7zr.SevenZipFile(\"../datasets/Test_rev1.7z\", mode='r') as archive:\n",
-    "  archive.extractall(path=\"C:\\Windows\\Temp\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "f2db238c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e196ef09",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# For Linux users.\n",
-    "testing_df = pd.read_csv(\"/tmp/Test_rev1.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "26411a89",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# For Windows users.\n",
-    "testing_df = pd.read_csv(\"C:\\Windows\\Temp\\Test_rev1.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "9ff00158",
    "metadata": {},
    "outputs": [
@@ -299,14 +368,14 @@
        "4  cv-library.co.uk  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "testing_df.info()\n",
-    "testing_df.head()"
+    "df_testing.info()\n",
+    "df_testing.head()"
    ]
   },
   {
@@ -1174,31 +1243,25 @@
    "metadata": {},
    "source": [
     " - **No *Load-v1* nós tinhamos as seguintes situações:**\n",
-    "   - **Variáveis (features):**\n",
+    "   - Variáveis (features):\n",
     "     - Independentes:\n",
     "       - Title *(com CountVectorizer)*\n",
     "     - Dependente:\n",
     "       - SalaryNormalized (normalizada pelo a Adzuna)\n",
-    "   - **Como Métrica de Avaliação (MAE) tivemos os seguintes resultados (ordenados do menor para o maior):**\n",
+    "   - *Como Métrica de Avaliação (MAE) tivemos os seguintes resultados (ordenados do menor para o maior):*\n",
     "     - MAE for RandomForestRegressor Model: 6703\n",
     "     - MAE for Ridge Model: 8616\n",
     "     - MAE for Linear Regression Model: 8658\n",
     "     - MAE for Lasso Model: 8834\n",
-    "     - MAE for Elastic Net Model: 12888\n",
-    " - **No *Load-v2* nós tinhamos as seguintes situações:**\n",
-    "   - **Variáveis (features):**\n",
-    "     - Independentes:\n",
-    "       - Title *(com CountVectorizer)*\n",
-    "       - FullDescription *(com CountVectorizer)*\n",
-    "     - Dependente:\n",
-    "       - SalaryNormalized (normalizada pelo a Adzuna)\n",
-    "   - **O primeiro treinamento do Load-v2 vai ser apenas com a variável \"FullDescription\". Isso porque, nós vamos vamos comparar se nossos modelos aprendem melhor só com a variável \"FullDescription\" em relação a variável \"Title\". O resultado foi o seguinte  (ordenados do menor para o maior):**\n",
-    "     - MAE for Ridge Model: 8191\n",
-    "     - MAE for Lasso Model: 8338\n",
-    "     - MAE for Elastic Net Model: 9812\n",
-    "     - MAE for Linear Regression Model: 10844\n",
-    "     - MAE for RandomForestRegressor Model: Não finalizado.\n",
-    "       - Esse modelo demorou mais de 24h (quase 40) e não finalizou o treinamento. Devido a esse problema vou procurar outra abordagem para minimizar o custo de tempo."
+    "     - MAE for Elastic Net Model: 12888"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0cf3d4c3",
+   "metadata": {},
+   "source": [
+    "**Rodrigo Leite -** *drigols*"
    ]
   }
  ],
